Remove dependency version restrictions; allow latest.

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {erl_opts, [verbose]}.
 {escript_name, "ecomm"}.
 {deps, [
-	{ebs, "1.1.1"},
-	{egetopt, "1.0.0"}
+	ebs,
+	egetopt
 ]}.
 {profiles, [
 	{test, [
